# py_gd

./: .flake8  .gitignore  CMakeLists.txt  LICENSE_LIBGD.txt  PyPI_name_transfer_request.txt  README.md  UsingVCPKG.txt  build_gd.py  conda_requirements.txt  conda_requirements_dev.txt  pyproject.toml  re_link_for_anaconda.py  requirements.txt  setup.config.experiment  setup.old.py  setup.py  setup2.py
.github/workflows/: cibuildwheel.yaml  conda_test.yml  lint.yml  static_docs.yml
cmake/: BuildGD.cmake  FindGD.cmake
conda_build_test/: README.txt  conda_build_config.yaml  meta.yaml
docs/: build_api_docs.sh  build_color_images.py  color_images.rst  conf.py  index.rst  installing.rst  introduction.rst  reference.rst  sample_scripts.rst  splines.rst  tutorial_1.rst  tutorial_2.rst  tutorial_animation.rst  tutorial_colorramp.rst  tutorials.rst  working_with_color.rst
docs/_static/: readme.txt
docs/api/: py_gd.rst
docs/examples/: 0-ultra_simple.py  build_color_images.py  build_example_page.py  color_images.rst  colorramp.py  draw_dots.py  draw_star.py  mandelbrot.py  moderate_complex.py  run_all_examples.py  spline_star.py  ultra_simple.py
libgd_recipe/: Makefile.vc  bld.bat  build.sh  meta.yaml
py_gd/: .gitignore  __init__.py  _cm_listed.py  _color_data.py  _spline.pyx  build_gd.py  color_ramp.py  colors.py  py_gd.pxd  py_gd.pyx  setup.py  spline.c  spline.purepy  spline.py  spline.pyx
py_gd/py_gd/: py_gd.pyx
py_gd/test/: build_checksums.py  checksums.py  intersect_comp.py  test_animation.py  test_buffer.py  test_color_ramp.py  test_colors.py  test_gd.py  test_open_file.py  test_overflow.py  test_spline.py
py_gd/tests/: test_buffer.py  test_gd.py
tests/: build_checksums.py  intersect_comp.py  test_gd.py  test_overflow.py
