[build-system]
requires = ["scikit-build-core", "cython", "numpy", "cython-cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "py-gd"
dynamic = ["version"]
description = "python wrappers around libgd graphics lib"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
authors = [
    { name = "Christopher H. Barker", email = "chris.barker@noaa.gov" },
]
keywords = [
    "cython",
    "drawing",
    "graphics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/NOAA-ORR-ERD/py_gd"

[dependency-groups]
test = ["pytest"]
build = ["scikit-build-core", "cython", "numpy", "cython-cmake"]
dev = [{ include-group = "test" }, { include-group = "build"}, "build"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "py_gd/__init__.py"

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-groups = ["test"]
test-command = "pytest --pyargs py_gd"
before-all = [
  "git clone https://github.com/libgd/libgd.git --branch gd-2.3.3 --depth 1",
  "cmake -Slibgd -Bbuild-libgd -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=./install",
  "cmake --build build-libgd",
  "cmake --install build-libgd",
]
config-settings = { "cmake.define.GD_ROOT" = "./install"}
#repair-wheel-command = ""


