[build-system]
requires = ["scikit-build-core", "cython", "numpy", "cython-cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "py-gd"
dynamic = ["version"]
description = "python wrappers around libgd graphics lib"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
authors = [
    { name = "Christopher H. Barker", email = "chris.barker@noaa.gov" },
]
keywords = [
    "cython",
    "drawing",
    "graphics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/NOAA-ORR-ERD/py_gd"

[dependency-groups]
test = ["pytest"]
build = ["scikit-build-core", "cython", "numpy", "cython-cmake"]
dev = [{ include-group = "test" }, { include-group = "build"}, "build"]

[tool.scikit-build]
build-dir = "build"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "py_gd/__init__.py"

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-groups = ["test"]
test-command = "pytest --pyargs py_gd"
skip = ["*musl*"]
linux.before-all = [
   "dnf install -y gd-devel",
]
macos.config-settings = { "cmake.define.BUILD_DEPS" = "ON"}
macos.environment.MACOSX_DEPLOYMENT_TARGET = "13"

# Use delvewheel on windows
[tool.cibuildwheel.windows]
before-build = [
    "pip install delvewheel",
    "pwd",
    "ls -a"
]
# vcpkg_installed is not in the vcpkg dir -- where is it?
# find command found it in
# D:\a\py_gd\py_gd\vcpkg_installed\x64-windows\bin
# but that doesn't appear to do it :-(
# maybe that was inside the temporary build environment?
repair-wheel-command = ```delvewheel repair -w {dest_dir} {wheel} --add-path   D:\a\py_gd\py_gd\vcpkg_installed\x64-windows\bin```


